; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcpred_msa.c_hevc_intra_pred_angular_upper_16width_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcpred_msa.c_hevc_intra_pred_angular_upper_16width_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.hevc_intra_pred_angular_upper_16width_msa.inv_angle = private unnamed_addr constant [8 x i32] [i32 -256, i32 -315, i32 -390, i32 -482, i32 -630, i32 -910, i32 -1638, i32 -4096], align 16
@intra_pred_angle_up = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32, i32)* @hevc_intra_pred_angular_upper_16width_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_intra_pred_angular_upper_16width_msa(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca [8 x i32], align 16
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca [100 x i32], align 16
  %29 = alloca i32*, align 8
  %30 = alloca i32*, align 8
  %31 = alloca i32*, align 8
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i32, align 4
  %47 = alloca i32, align 4
  %48 = alloca i32, align 4
  %49 = alloca i32, align 4
  %50 = alloca i32, align 4
  %51 = alloca i32, align 4
  %52 = alloca i32, align 4
  %53 = alloca i32, align 4
  %54 = alloca i32, align 4
  %55 = alloca i32, align 4
  %56 = alloca i32, align 4
  %57 = alloca i32, align 4
  %58 = alloca i32, align 4
  %59 = alloca i32, align 4
  %60 = alloca i32, align 4
  %61 = alloca i32, align 4
  %62 = alloca i32, align 4
  %63 = alloca i32, align 4
  %64 = alloca i32, align 4
  %65 = alloca i32, align 4
  %66 = alloca i32, align 4
  %67 = alloca i32, align 4
  %68 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %69 = bitcast [8 x i32]* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %69, i8* align 16 bitcast ([8 x i32]* @__const.hevc_intra_pred_angular_upper_16width_msa.inv_angle to i8*), i64 32, i1 false)
  %70 = getelementptr inbounds [100 x i32], [100 x i32]* %28, i64 0, i64 0
  %71 = getelementptr inbounds i32, i32* %70, i64 16
  store i32* %71, i32** %29, align 8
  %72 = load i32*, i32** %7, align 8
  %73 = getelementptr inbounds i32, i32* %72, i64 -1
  store i32* %73, i32** %31, align 8
  %74 = load i32*, i32** @intra_pred_angle_up, align 8
  %75 = load i32, i32* %10, align 4
  %76 = sub nsw i32 %75, 18
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds i32, i32* %74, i64 %77
  %79 = load i32, i32* %78, align 4
  store i32 %79, i32* %23, align 4
  %80 = load i32, i32* %10, align 4
  %81 = sub nsw i32 %80, 18
  %82 = sext i32 %81 to i64
  %83 = getelementptr inbounds [8 x i32], [8 x i32]* %11, i64 0, i64 %82
  %84 = load i32, i32* %83, align 4
  store i32 %84, i32* %26, align 4
  %85 = load i32, i32* %23, align 4
  %86 = ashr i32 %85, 1
  store i32 %86, i32* %32, align 4
  %87 = load i32, i32* %23, align 4
  store i32 %87, i32* %24, align 4
  %88 = load i32*, i32** %6, align 8
  %89 = getelementptr inbounds i32, i32* %88, i64 -1
  store i32* %89, i32** %30, align 8
  %90 = load i32, i32* %32, align 4
  %91 = icmp slt i32 %90, -1
  br i1 %91, label %92, label %133

92:                                               ; preds = %5
  %93 = load i32, i32* %26, align 4
  %94 = load i32, i32* %32, align 4
  %95 = mul nsw i32 %93, %94
  store i32 %95, i32* %27, align 4
  %96 = load i32*, i32** %30, align 8
  %97 = call i32 @LD_UB(i32* %96)
  store i32 %97, i32* %33, align 4
  %98 = load i32*, i32** %30, align 8
  %99 = getelementptr inbounds i32, i32* %98, i64 16
  %100 = call i32 @LW(i32* %99)
  store i32 %100, i32* %22, align 4
  %101 = load i32, i32* %33, align 4
  %102 = load i32*, i32** %29, align 8
  %103 = call i32 @ST_UB(i32 %101, i32* %102)
  %104 = load i32, i32* %22, align 4
  %105 = load i32*, i32** %29, align 8
  %106 = getelementptr inbounds i32, i32* %105, i64 16
  %107 = call i32 @SW(i32 %104, i32* %106)
  %108 = load i32, i32* %32, align 4
  store i32 %108, i32* %12, align 4
  br label %109

109:                                              ; preds = %128, %92
  %110 = load i32, i32* %12, align 4
  %111 = icmp sle i32 %110, -1
  br i1 %111, label %112, label %131

112:                                              ; preds = %109
  %113 = load i32, i32* %27, align 4
  %114 = add nsw i32 %113, 128
  %115 = ashr i32 %114, 8
  store i32 %115, i32* %25, align 4
  %116 = load i32*, i32** %31, align 8
  %117 = load i32, i32* %25, align 4
  %118 = sext i32 %117 to i64
  %119 = getelementptr inbounds i32, i32* %116, i64 %118
  %120 = load i32, i32* %119, align 4
  %121 = load i32*, i32** %29, align 8
  %122 = load i32, i32* %12, align 4
  %123 = sext i32 %122 to i64
  %124 = getelementptr inbounds i32, i32* %121, i64 %123
  store i32 %120, i32* %124, align 4
  %125 = load i32, i32* %26, align 4
  %126 = load i32, i32* %27, align 4
  %127 = add nsw i32 %126, %125
  store i32 %127, i32* %27, align 4
  br label %128

128:                                              ; preds = %112
  %129 = load i32, i32* %12, align 4
  %130 = add nsw i32 %129, 1
  store i32 %130, i32* %12, align 4
  br label %109

131:                                              ; preds = %109
  %132 = load i32*, i32** %29, align 8
  store i32* %132, i32** %30, align 8
  br label %133

133:                                              ; preds = %131, %5
  store i32 4, i32* %13, align 4
  br label %134

134:                                              ; preds = %138, %133
  %135 = load i32, i32* %13, align 4
  %136 = add nsw i32 %135, -1
  store i32 %136, i32* %13, align 4
  %137 = icmp ne i32 %135, 0
  br i1 %137, label %138, label %365

138:                                              ; preds = %134
  %139 = load i32, i32* %24, align 4
  %140 = ashr i32 %139, 5
  store i32 %140, i32* %14, align 4
  %141 = load i32, i32* %24, align 4
  %142 = and i32 %141, 31
  store i32 %142, i32* %15, align 4
  %143 = load i32, i32* %23, align 4
  %144 = load i32, i32* %24, align 4
  %145 = add nsw i32 %144, %143
  store i32 %145, i32* %24, align 4
  %146 = load i32, i32* %24, align 4
  %147 = ashr i32 %146, 5
  store i32 %147, i32* %16, align 4
  %148 = load i32, i32* %24, align 4
  %149 = and i32 %148, 31
  store i32 %149, i32* %17, align 4
  %150 = load i32, i32* %23, align 4
  %151 = load i32, i32* %24, align 4
  %152 = add nsw i32 %151, %150
  store i32 %152, i32* %24, align 4
  %153 = load i32, i32* %24, align 4
  %154 = ashr i32 %153, 5
  store i32 %154, i32* %18, align 4
  %155 = load i32, i32* %24, align 4
  %156 = and i32 %155, 31
  store i32 %156, i32* %19, align 4
  %157 = load i32, i32* %23, align 4
  %158 = load i32, i32* %24, align 4
  %159 = add nsw i32 %158, %157
  store i32 %159, i32* %24, align 4
  %160 = load i32, i32* %24, align 4
  %161 = ashr i32 %160, 5
  store i32 %161, i32* %20, align 4
  %162 = load i32, i32* %24, align 4
  %163 = and i32 %162, 31
  store i32 %163, i32* %21, align 4
  %164 = load i32, i32* %23, align 4
  %165 = load i32, i32* %24, align 4
  %166 = add nsw i32 %165, %164
  store i32 %166, i32* %24, align 4
  %167 = load i32*, i32** %30, align 8
  %168 = load i32, i32* %14, align 4
  %169 = sext i32 %168 to i64
  %170 = getelementptr inbounds i32, i32* %167, i64 %169
  %171 = getelementptr inbounds i32, i32* %170, i64 1
  %172 = load i32, i32* %33, align 4
  %173 = load i32, i32* %34, align 4
  %174 = call i32 @LD_UB2(i32* %171, i32 16, i32 %172, i32 %173)
  %175 = load i32*, i32** %30, align 8
  %176 = load i32, i32* %16, align 4
  %177 = sext i32 %176 to i64
  %178 = getelementptr inbounds i32, i32* %175, i64 %177
  %179 = getelementptr inbounds i32, i32* %178, i64 1
  %180 = load i32, i32* %35, align 4
  %181 = load i32, i32* %36, align 4
  %182 = call i32 @LD_UB2(i32* %179, i32 16, i32 %180, i32 %181)
  %183 = load i32*, i32** %30, align 8
  %184 = load i32, i32* %18, align 4
  %185 = sext i32 %184 to i64
  %186 = getelementptr inbounds i32, i32* %183, i64 %185
  %187 = getelementptr inbounds i32, i32* %186, i64 1
  %188 = load i32, i32* %37, align 4
  %189 = load i32, i32* %38, align 4
  %190 = call i32 @LD_UB2(i32* %187, i32 16, i32 %188, i32 %189)
  %191 = load i32*, i32** %30, align 8
  %192 = load i32, i32* %20, align 4
  %193 = sext i32 %192 to i64
  %194 = getelementptr inbounds i32, i32* %191, i64 %193
  %195 = getelementptr inbounds i32, i32* %194, i64 1
  %196 = load i32, i32* %39, align 4
  %197 = load i32, i32* %40, align 4
  %198 = call i32 @LD_UB2(i32* %195, i32 16, i32 %196, i32 %197)
  %199 = load i32, i32* %15, align 4
  %200 = call i32 @__msa_fill_h(i32 %199)
  store i32 %200, i32* %45, align 4
  %201 = load i32, i32* %15, align 4
  %202 = sub nsw i32 32, %201
  %203 = call i32 @__msa_fill_h(i32 %202)
  store i32 %203, i32* %46, align 4
  %204 = load i32, i32* %17, align 4
  %205 = call i32 @__msa_fill_h(i32 %204)
  store i32 %205, i32* %47, align 4
  %206 = load i32, i32* %17, align 4
  %207 = sub nsw i32 32, %206
  %208 = call i32 @__msa_fill_h(i32 %207)
  store i32 %208, i32* %48, align 4
  %209 = load i32, i32* %19, align 4
  %210 = call i32 @__msa_fill_h(i32 %209)
  store i32 %210, i32* %49, align 4
  %211 = load i32, i32* %19, align 4
  %212 = sub nsw i32 32, %211
  %213 = call i32 @__msa_fill_h(i32 %212)
  store i32 %213, i32* %50, align 4
  %214 = load i32, i32* %21, align 4
  %215 = call i32 @__msa_fill_h(i32 %214)
  store i32 %215, i32* %51, align 4
  %216 = load i32, i32* %21, align 4
  %217 = sub nsw i32 32, %216
  %218 = call i32 @__msa_fill_h(i32 %217)
  store i32 %218, i32* %52, align 4
  %219 = load i32, i32* %34, align 4
  %220 = load i32, i32* %33, align 4
  %221 = load i32, i32* %36, align 4
  %222 = load i32, i32* %35, align 4
  %223 = load i32, i32* %38, align 4
  %224 = load i32, i32* %37, align 4
  %225 = load i32, i32* %40, align 4
  %226 = load i32, i32* %39, align 4
  %227 = load i32, i32* %34, align 4
  %228 = load i32, i32* %36, align 4
  %229 = load i32, i32* %38, align 4
  %230 = load i32, i32* %40, align 4
  %231 = call i32 @SLDI_B4_UB(i32 %219, i32 %220, i32 %221, i32 %222, i32 %223, i32 %224, i32 %225, i32 %226, i32 1, i32 %227, i32 %228, i32 %229, i32 %230)
  %232 = load i32, i32* %33, align 4
  %233 = load i32, i32* %53, align 4
  %234 = load i32, i32* %54, align 4
  %235 = call i32 @UNPCK_UB_SH(i32 %232, i32 %233, i32 %234)
  %236 = load i32, i32* %34, align 4
  %237 = load i32, i32* %55, align 4
  %238 = load i32, i32* %56, align 4
  %239 = call i32 @UNPCK_UB_SH(i32 %236, i32 %237, i32 %238)
  %240 = load i32, i32* %35, align 4
  %241 = load i32, i32* %57, align 4
  %242 = load i32, i32* %58, align 4
  %243 = call i32 @UNPCK_UB_SH(i32 %240, i32 %241, i32 %242)
  %244 = load i32, i32* %36, align 4
  %245 = load i32, i32* %59, align 4
  %246 = load i32, i32* %60, align 4
  %247 = call i32 @UNPCK_UB_SH(i32 %244, i32 %245, i32 %246)
  %248 = load i32, i32* %37, align 4
  %249 = load i32, i32* %61, align 4
  %250 = load i32, i32* %62, align 4
  %251 = call i32 @UNPCK_UB_SH(i32 %248, i32 %249, i32 %250)
  %252 = load i32, i32* %38, align 4
  %253 = load i32, i32* %63, align 4
  %254 = load i32, i32* %64, align 4
  %255 = call i32 @UNPCK_UB_SH(i32 %252, i32 %253, i32 %254)
  %256 = load i32, i32* %39, align 4
  %257 = load i32, i32* %65, align 4
  %258 = load i32, i32* %66, align 4
  %259 = call i32 @UNPCK_UB_SH(i32 %256, i32 %257, i32 %258)
  %260 = load i32, i32* %40, align 4
  %261 = load i32, i32* %67, align 4
  %262 = load i32, i32* %68, align 4
  %263 = call i32 @UNPCK_UB_SH(i32 %260, i32 %261, i32 %262)
  %264 = load i32, i32* %55, align 4
  %265 = load i32, i32* %45, align 4
  %266 = load i32, i32* %56, align 4
  %267 = load i32, i32* %45, align 4
  %268 = load i32, i32* %59, align 4
  %269 = load i32, i32* %47, align 4
  %270 = load i32, i32* %60, align 4
  %271 = load i32, i32* %47, align 4
  %272 = load i32, i32* %55, align 4
  %273 = load i32, i32* %56, align 4
  %274 = load i32, i32* %59, align 4
  %275 = load i32, i32* %60, align 4
  %276 = call i32 @MUL4(i32 %264, i32 %265, i32 %266, i32 %267, i32 %268, i32 %269, i32 %270, i32 %271, i32 %272, i32 %273, i32 %274, i32 %275)
  %277 = load i32, i32* %63, align 4
  %278 = load i32, i32* %49, align 4
  %279 = load i32, i32* %64, align 4
  %280 = load i32, i32* %49, align 4
  %281 = load i32, i32* %67, align 4
  %282 = load i32, i32* %51, align 4
  %283 = load i32, i32* %68, align 4
  %284 = load i32, i32* %51, align 4
  %285 = load i32, i32* %63, align 4
  %286 = load i32, i32* %64, align 4
  %287 = load i32, i32* %67, align 4
  %288 = load i32, i32* %68, align 4
  %289 = call i32 @MUL4(i32 %277, i32 %278, i32 %279, i32 %280, i32 %281, i32 %282, i32 %283, i32 %284, i32 %285, i32 %286, i32 %287, i32 %288)
  %290 = load i32, i32* %53, align 4
  %291 = load i32, i32* %46, align 4
  %292 = mul nsw i32 %290, %291
  %293 = load i32, i32* %55, align 4
  %294 = add nsw i32 %293, %292
  store i32 %294, i32* %55, align 4
  %295 = load i32, i32* %54, align 4
  %296 = load i32, i32* %46, align 4
  %297 = mul nsw i32 %295, %296
  %298 = load i32, i32* %56, align 4
  %299 = add nsw i32 %298, %297
  store i32 %299, i32* %56, align 4
  %300 = load i32, i32* %57, align 4
  %301 = load i32, i32* %48, align 4
  %302 = mul nsw i32 %300, %301
  %303 = load i32, i32* %59, align 4
  %304 = add nsw i32 %303, %302
  store i32 %304, i32* %59, align 4
  %305 = load i32, i32* %58, align 4
  %306 = load i32, i32* %48, align 4
  %307 = mul nsw i32 %305, %306
  %308 = load i32, i32* %60, align 4
  %309 = add nsw i32 %308, %307
  store i32 %309, i32* %60, align 4
  %310 = load i32, i32* %61, align 4
  %311 = load i32, i32* %50, align 4
  %312 = mul nsw i32 %310, %311
  %313 = load i32, i32* %63, align 4
  %314 = add nsw i32 %313, %312
  store i32 %314, i32* %63, align 4
  %315 = load i32, i32* %62, align 4
  %316 = load i32, i32* %50, align 4
  %317 = mul nsw i32 %315, %316
  %318 = load i32, i32* %64, align 4
  %319 = add nsw i32 %318, %317
  store i32 %319, i32* %64, align 4
  %320 = load i32, i32* %65, align 4
  %321 = load i32, i32* %52, align 4
  %322 = mul nsw i32 %320, %321
  %323 = load i32, i32* %67, align 4
  %324 = add nsw i32 %323, %322
  store i32 %324, i32* %67, align 4
  %325 = load i32, i32* %66, align 4
  %326 = load i32, i32* %52, align 4
  %327 = mul nsw i32 %325, %326
  %328 = load i32, i32* %68, align 4
  %329 = add nsw i32 %328, %327
  store i32 %329, i32* %68, align 4
  %330 = load i32, i32* %55, align 4
  %331 = load i32, i32* %56, align 4
  %332 = load i32, i32* %59, align 4
  %333 = load i32, i32* %60, align 4
  %334 = call i32 @SRARI_H4_SH(i32 %330, i32 %331, i32 %332, i32 %333, i32 5)
  %335 = load i32, i32* %63, align 4
  %336 = load i32, i32* %64, align 4
  %337 = load i32, i32* %67, align 4
  %338 = load i32, i32* %68, align 4
  %339 = call i32 @SRARI_H4_SH(i32 %335, i32 %336, i32 %337, i32 %338, i32 5)
  %340 = load i32, i32* %56, align 4
  %341 = load i32, i32* %55, align 4
  %342 = load i32, i32* %60, align 4
  %343 = load i32, i32* %59, align 4
  %344 = load i32, i32* %64, align 4
  %345 = load i32, i32* %63, align 4
  %346 = load i32, i32* %68, align 4
  %347 = load i32, i32* %67, align 4
  %348 = load i32, i32* %41, align 4
  %349 = load i32, i32* %42, align 4
  %350 = load i32, i32* %43, align 4
  %351 = load i32, i32* %44, align 4
  %352 = call i32 @PCKEV_B4_SB(i32 %340, i32 %341, i32 %342, i32 %343, i32 %344, i32 %345, i32 %346, i32 %347, i32 %348, i32 %349, i32 %350, i32 %351)
  %353 = load i32, i32* %41, align 4
  %354 = load i32, i32* %42, align 4
  %355 = load i32, i32* %43, align 4
  %356 = load i32, i32* %44, align 4
  %357 = load i32*, i32** %8, align 8
  %358 = load i32, i32* %9, align 4
  %359 = call i32 @ST_SB4(i32 %353, i32 %354, i32 %355, i32 %356, i32* %357, i32 %358)
  %360 = load i32, i32* %9, align 4
  %361 = mul nsw i32 4, %360
  %362 = load i32*, i32** %8, align 8
  %363 = sext i32 %361 to i64
  %364 = getelementptr inbounds i32, i32* %362, i64 %363
  store i32* %364, i32** %8, align 8
  br label %134

365:                                              ; preds = %134
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @LD_UB(i32*) #2

declare dso_local i32 @LW(i32*) #2

declare dso_local i32 @ST_UB(i32, i32*) #2

declare dso_local i32 @SW(i32, i32*) #2

declare dso_local i32 @LD_UB2(i32*, i32, i32, i32) #2

declare dso_local i32 @__msa_fill_h(i32) #2

declare dso_local i32 @SLDI_B4_UB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @UNPCK_UB_SH(i32, i32, i32) #2

declare dso_local i32 @MUL4(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @SRARI_H4_SH(i32, i32, i32, i32, i32) #2

declare dso_local i32 @PCKEV_B4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @ST_SB4(i32, i32, i32, i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
